# Freight-Exchange

./: .gitignore  README.md  docker-compose.yml
listing-service/: .env  alembic.ini  docker-compose.yml  pyproject.toml
listing-service/alembic/: env.py
listing-service/alembic/versions/: bb499f34ef49_initial_schema.py
listing-service/app/: main.py
listing-service/app/api/: deps.py  listings.py  router.py
listing-service/app/clients/: cargo_client.py  route_client.py
listing-service/app/core/: config.py  security.py
listing-service/app/db/: session.py
listing-service/app/db/enums/: listing.py
listing-service/app/db/models/: __init__.py  cargo.py  listing.py  point.py  route.py  route_waypoint.py  transport.py
listing-service/app/kafka/: kafka_consumer.py  kafka_producer.py  topics.py
listing-service/app/repositories/: cargo_repository.py  listing_repository.py  point_repository.py  route_repository.py  transport_repository.py
listing-service/app/schemas/: cargo.py  listing.py  point.py  route.py  transport.py
listing-service/app/services/: listing_service.py
listing-service/certs/: public.pem
user-service/: .dockerignore  .env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
user-service/app/: main.py
user-service/app/core/: auth.py  config.py  dependencies.py  security.py
user-service/app/infrastructure/db/: session.py
user-service/app/infrastructure/messaging/: kafka_consumer.py  kafka_producer.py  topics.py
user-service/certs/: public.pem
user-service/user_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+195 files in other folders)
