[project]
name = "listing-service"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "python-jose[cryptography]",
    "python-dotenv",
    "aiokafka"
]