[project]
name = "user-service"
version = "0.1.0"
description = "User microservice"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "python-jose[cryptography]",
    "cryptography",
    "passlib[bcrypt]",
    "redis",
    "aio-pika",
    "structlog",
    "psycopg2-binary",
    "aiokafka"
]

[tool.setuptools]
py-modules = []